# CropWise

./: .env.example  .gitignore  README .md  README.md  package-lock.json  package.json  run-servers.bat
AIML/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  run_mandi_server.sh  test_api_e2e.py  test_dynamic_inputs.py  test_unified_api.py  voice_assistant.py
AIML/disease_detection/: __init__.py  predict.py
AIML/mandi_intelligence/: API_GUIDE.md  DYNAMIC_DISTANCE.md  EXPANSION_SUMMARY.md  FARMER_GUIDE.md  MODEL_ACCURACY.md  README.md  README_FARMER.md  analyze_dataset.py  analyze_full_data.py  get_recommendation.py  quick_test.py  requirements.txt  retrain_improved.py  show_gujarat_mandis.py  test_api_connection.py  test_mandis.py  test_models.py  test_real_data_load.py  train_with_real_data.py
AIML/mandi_intelligence/api/: __init__.py  main.py  ml_api.py
AIML/mandi_intelligence/core/: __init__.py  insight_generator.py  profit_calculator.py
AIML/ml/: fertilizer_router.py  gujarat_districts.csv
AIML/scrapbot/: README.md
client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
client/src/: App.jsx  index.css
docs/: registration-table.sql
mobile/: .env.example  App.js  README.md  app.config.js  app.json  package-lock.json  package.json
mobile/assets/: README.md
mobile/src/: theme.js
sar_processing/: README.md  anomaly_detection.py  bootstrap_db.py  config.py  db.py  feature_extractor.py  gee_client.py  main.py  pyproject.toml  seed_sample.py  worker.py
(+65 files in other folders)
